--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.24",
+    "katex": "^0.16.22",
     "sass-embedded": "^1.89.2",
-    "vue": "^3.5.17",
+    "vue": "^3.5.21",
     "vuepress": "2.0.0-rc.24",
     "vuepress-theme-hope": "2.0.0-rc.94"
   }
