--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "sass-embedded": "^1.89.2",
     "vue": "^3.5.21",
     "vuepress": "2.0.0-rc.24",
+    "vuepress-plugin-components": "^2.0.0-rc.94",
     "vuepress-theme-hope": "2.0.0-rc.94"
+  },
+  "dependencies": {
+    "swiper": "^11.2.10"
   }
 }
